--- a/laokou-common/laokou-common-vertx/pom.xml
+++ b/laokou-common/laokou-common-vertx/pom.xml
@@ -9,12 +9,17 @@
     <version>3.5.0</version>
   </parent>
 
-  <artifactId>laokou-common-vertx-web</artifactId>
+  <artifactId>laokou-common-vertx</artifactId>
 
-  <properties>
-    <maven.compiler.source>21</maven.compiler.source>
-    <maven.compiler.target>21</maven.compiler.target>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+  <dependencies>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter</artifactId>
+    </dependency>
+  </dependencies>
 
 </project>
