--- a/laokou-common/laokou-common-network/laokou-common-network-mqtt-client/pom.xml
+++ b/laokou-common/laokou-common-network/laokou-common-network-mqtt-client/pom.xml
@@ -51,6 +51,10 @@
       <groupId>org.laokou</groupId>
       <artifactId>laokou-common-kafka</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-vertx</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
