--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,7 @@
     <!--spring-boot版本-->
     <spring-boot.version>3.5.0-RC1</spring-boot.version>
     <!--spring-cloud版本-->
-    <spring-cloud.version>2025.0.0-M3</spring-cloud.version>
+    <spring-cloud.version>2025.0.0-RC1</spring-cloud.version>
     <!--spring-framework版本-->
     <spring-framework.version>6.2.6</spring-framework.version>
     <!--cloud-alibaba版本-->
