--- a/laokou-common/laokou-common-vertx/pom.xml
+++ b/laokou-common/laokou-common-vertx/pom.xml
@@ -20,6 +20,10 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-i18n</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
