feat: 移除netty实现的websocket和tcp~

--- a/laokou-service/laokou-module/laokou-jtt808/laokou-jtt808-domain/pom.xml
+++ b/laokou-service/laokou-module/laokou-jtt808/laokou-jtt808-domain/pom.xml
@@ -12,7 +12,7 @@
   <dependencies>
     <dependency>
       <groupId>org.laokou</groupId>
-      <artifactId>laokou-common-core</artifactId>
+      <artifactId>laokou-jtt808-client</artifactId>
     </dependency>
   </dependencies>
 
