--- a/laokou-service/laokou-module/laokou-jtt808/laokou-jtt808-infrastructure/pom.xml
+++ b/laokou-service/laokou-module/laokou-jtt808/laokou-jtt808-infrastructure/pom.xml
@@ -15,12 +15,8 @@
       <artifactId>laokou-jtt808-domain</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.laokou</groupId>
-      <artifactId>laokou-jtt808-client</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.laokou</groupId>
-      <artifactId>laokou-common-netty</artifactId>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-webflux</artifactId>
     </dependency>
   </dependencies>
 
