--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -184,7 +184,7 @@
     <!--commons-net版本-->
     <commons-net.version>3.11.1</commons-net.version>
     <!--vertx版本-->
-    <vertx.version>4.5.14</vertx.version>
+    <vertx.version>5.0.0</vertx.version>
     <!--springdoc-openapi版本-->
     <springdoc-openapi.version>2.8.8</springdoc-openapi.version>
   </properties>
@@ -1070,6 +1070,16 @@
       <dependency>
         <groupId>io.netty</groupId>
         <artifactId>netty-all</artifactId>
+        <version>${netty.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.netty</groupId>
+        <artifactId>netty-transport</artifactId>
+        <version>${netty.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.netty</groupId>
+        <artifactId>netty-common</artifactId>
         <version>${netty.version}</version>
       </dependency>
       <dependency>
