--- a/laokou-common/laokou-common-secret/pom.xml
+++ b/laokou-common/laokou-common-secret/pom.xml
@@ -58,6 +58,19 @@
       <groupId>jakarta.servlet</groupId>
       <artifactId>jakarta.servlet-api</artifactId>
       <scope>provided</scope>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-test</artifactId>
+      <scope>test</scope>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-log4j2</artifactId>
+      <scope>test</scope>
+      <optional>true</optional>
     </dependency>
   </dependencies>
 
