--- a/laokou-common/laokou-common-websocket/pom.xml
+++ b/laokou-common/laokou-common-websocket/pom.xml
@@ -24,6 +24,11 @@
       <groupId>org.laokou</groupId>
       <artifactId>laokou-common-security</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-nacos</artifactId>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 
 </project>
