--- a/laokou-service/laokou-iot/laokou-iot-infrastructure/pom.xml
+++ b/laokou-service/laokou-iot/laokou-iot-infrastructure/pom.xml
@@ -101,6 +101,10 @@
       <groupId>org.laokou</groupId>
       <artifactId>laokou-common-network-mqtt-client</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-websocket</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
