--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,7 +24,7 @@ jobs:
       - name: Run the Maven verify phase
         run: mvn --batch-mode --update-snapshots verify -DskipTests
       - name: Test with Maven
-        run: mvn clean test -P prod
+        run: mvn clean test -P dev
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v5.4.3
         env:
@@ -61,7 +61,7 @@ jobs:
             ./laokou-service/laokou-distributed-identifier/laokou-distributed-identifier-start/target/site/jacoco/jacoco.xml
           token: ${{ secrets.CODECOV_TOKEN }}
       - name: Build with Maven
-        run: mvn clean install -P prod -DskipTests -B
+        run: mvn clean install -P dev -DskipTests -B
       - name: Build the Docker image
         run: |
           # 登录阿里云镜像仓库
