feat: 新增更新日志

--- a/laokou-service/laokou-iot/laokou-iot-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-iot/laokou-iot-start/src/main/resources/application.yml
@@ -43,7 +43,7 @@ spring:
   lifecycle:
     timeout-per-shutdown-phase: "2m"
   websocket-server:
-    ip: 127.0.0.1
+    ip: ${WEBSOCKET_IP:127.0.0.1}
     port: 1001
     bind-ip: 0.0.0.0
     service-id: ${spring.application.name}-websocket
