feat: 修改readme，更新版本说明，修改实体交给spring管理，减少重复对象创建

--- a/laokou-service/laokou-tcp/laokou-tcp-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-tcp/laokou-tcp-start/src/main/resources/application.yml
@@ -44,6 +44,9 @@ management:
     tags:
       application: ${spring.application.name}
 
+logging:
+  config: classpath:log4j2-@PROFILE-ACTIVE@.xml
+
 spring:
   application:
     name: ${SERVICE_ID:laokou-tcp}
