--- a/laokou-service/laokou-network/laokou-udp/laokou-udp-infrastructure/pom.xml
+++ b/laokou-service/laokou-network/laokou-udp/laokou-udp-infrastructure/pom.xml
@@ -18,6 +18,18 @@
       <groupId>org.laokou</groupId>
       <artifactId>laokou-common-vertx</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-webflux</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-trace</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-prometheus</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
