--- a/laokou-service/laokou-network/laokou-udp/pom.xml
+++ b/laokou-service/laokou-network/laokou-udp/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.laokou</groupId>
-    <artifactId>laokou-tcp</artifactId>
+    <artifactId>laokou-network</artifactId>
     <version>3.5.0</version>
   </parent>
   <artifactId>laokou-udp</artifactId>
