--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -183,11 +183,18 @@
     <vertx.version>5.0.0</vertx.version>
     <!--springdoc-openapi版本-->
     <springdoc-openapi.version>2.8.8</springdoc-openapi.version>
+    <!--modbus4j版本-->
+    <modbus4j.version>3.1.0</modbus4j.version>
   </properties>
 
   <!-- 定义全局jar版本,模块使用需要再次引入但不用写版本号 -->
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>com.infiniteautomation</groupId>
+        <artifactId>modbus4j</artifactId>
+        <version>${modbus4j.version}</version>
+      </dependency>
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-autoconfigure</artifactId>
