--- a/laokou-common/laokou-common-modbus4j/pom.xml
+++ b/laokou-common/laokou-common-modbus4j/pom.xml
@@ -20,6 +20,18 @@
       <groupId>com.infiniteautomation</groupId>
       <artifactId>modbus4j</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-log4j2</artifactId>
+      <scope>test</scope>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-test</artifactId>
+      <scope>test</scope>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 
 </project>
