style: 前端UI接口规范修改，增加modbus rtu/ascii测试用例

--- a/laokou-common/laokou-common-modbus4j/pom.xml
+++ b/laokou-common/laokou-common-modbus4j/pom.xml
@@ -21,6 +21,10 @@
       <artifactId>modbus4j</artifactId>
     </dependency>
     <dependency>
+      <groupId>com.fazecast</groupId>
+      <artifactId>jSerialComm</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.laokou</groupId>
       <artifactId>laokou-common-log4j2</artifactId>
       <scope>test</scope>
