--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -185,11 +185,18 @@
     <springdoc-openapi.version>2.8.8</springdoc-openapi.version>
     <!--modbus4j版本-->
     <modbus4j.version>3.1.0</modbus4j.version>
+    <!--jSerialComm版本-->
+    <jSerialComm.version>2.11.0</jSerialComm.version>
   </properties>
 
   <!-- 定义全局jar版本,模块使用需要再次引入但不用写版本号 -->
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>com.fazecast</groupId>
+        <artifactId>jSerialComm</artifactId>
+        <version>${jSerialComm.version}</version>
+      </dependency>
       <dependency>
         <groupId>com.infiniteautomation</groupId>
         <artifactId>modbus4j</artifactId>
