--- a/laokou-common/laokou-common-network/laokou-common-network-mqtt-client/pom.xml
+++ b/laokou-common/laokou-common-network/laokou-common-network-mqtt-client/pom.xml
@@ -49,7 +49,7 @@
     </dependency>
     <dependency>
       <groupId>org.laokou</groupId>
-      <artifactId>laokou-common-kafka</artifactId>
+      <artifactId>laokou-common-pulsar</artifactId>
     </dependency>
     <dependency>
       <groupId>org.laokou</groupId>
