--- a/laokou-common/pom.xml
+++ b/laokou-common/pom.xml
@@ -97,6 +97,7 @@
     <module>laokou-common-websocket</module>
     <module>laokou-common-modbus4j</module>
     <module>laokou-common-pulsar</module>
+    <module>laokou-common-coap</module>
   </modules>
 
 </project>
