--- a/laokou-service/laokou-network/laokou-mqtt/laokou-mqtt-infrastructure/pom.xml
+++ b/laokou-service/laokou-network/laokou-mqtt/laokou-mqtt-infrastructure/pom.xml
@@ -44,15 +44,21 @@
     </dependency>
     <dependency>
       <groupId>org.laokou</groupId>
-      <artifactId>laokou-common-network-mqtt-client</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.laokou</groupId>
       <artifactId>laokou-common-trace</artifactId>
     </dependency>
     <dependency>
       <groupId>org.laokou</groupId>
       <artifactId>laokou-common-prometheus</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-network-mqtt-client</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>org.springframework.boot</groupId>
+          <artifactId>spring-boot-starter-pulsar</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
   </dependencies>
 
