--- a/laokou-common/laokou-common-nacos/src/test/resources/bootstrap.yml
+++ b/laokou-common/laokou-common-nacos/src/test/resources/bootstrap.yml
@@ -23,6 +23,6 @@ spring:
         username: nacos
         password: nacos
         group: DEFAULT_GROUP
-        cluster-name: laokou-cluster
+        cluster-name: nacos-cluster
       username: nacos
       password: nacos
