--- a/laokou-common/laokou-common-redis/pom.xml
+++ b/laokou-common/laokou-common-redis/pom.xml
@@ -57,5 +57,9 @@
       <groupId>org.laokou</groupId>
       <artifactId>laokou-common-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.fury</groupId>
+      <artifactId>fury-core</artifactId>
+    </dependency>
   </dependencies>
 </project>
