--- a/laokou-service/laokou-auth/laokou-auth-client/pom.xml
+++ b/laokou-service/laokou-auth/laokou-auth-client/pom.xml
@@ -38,7 +38,7 @@
     </dependency>
     <dependency>
       <groupId>org.laokou</groupId>
-      <artifactId>laokou-common-core</artifactId>
+      <artifactId>laokou-common-i18n</artifactId>
     </dependency>
   </dependencies>
 
