--- a/laokou-service/laokou-auth/laokou-auth-domain/pom.xml
+++ b/laokou-service/laokou-auth/laokou-auth-domain/pom.xml
@@ -23,7 +23,7 @@
     </dependency>
     <dependency>
       <groupId>org.laokou</groupId>
-      <artifactId>laokou-auth-client</artifactId>
+      <artifactId>laokou-common-core</artifactId>
     </dependency>
     <dependency>
       <groupId>org.laokou</groupId>
