--- a/laokou-service/laokou-auth/laokou-auth-infrastructure/pom.xml
+++ b/laokou-service/laokou-auth/laokou-auth-infrastructure/pom.xml
@@ -115,6 +115,10 @@
       <groupId>org.laokou</groupId>
       <artifactId>laokou-common-openfeign</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-auth-client</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
