--- a/pom.xml
+++ b/pom.xml
@@ -250,7 +250,7 @@
         <NACOS-GROUP>LAOKOU_GROUP</NACOS-GROUP>
         <NACOS-USERNAME>nacos</NACOS-USERNAME>
         <NACOS-PASSWORD>nacos</NACOS-PASSWORD>
-        <NACOS-CLUSTER-NAME>laokou-cluster</NACOS-CLUSTER-NAME>
+        <NACOS-CLUSTER-NAME>nacos-cluster</NACOS-CLUSTER-NAME>
         <SENTINEL-USERNAME>sentinel</SENTINEL-USERNAME>
         <SENTINEL-PASSWORD>sentinel</SENTINEL-PASSWORD>
         <PROFILE-ACTIVE>dev</PROFILE-ACTIVE>
@@ -291,7 +291,7 @@
         <NACOS-GROUP>LAOKOU_GROUP</NACOS-GROUP>
         <NACOS-USERNAME>nacos</NACOS-USERNAME>
         <NACOS-PASSWORD>nacos</NACOS-PASSWORD>
-        <NACOS-CLUSTER-NAME>laokou-cluster</NACOS-CLUSTER-NAME>
+        <NACOS-CLUSTER-NAME>nacos-cluster</NACOS-CLUSTER-NAME>
         <SENTINEL-USERNAME>sentinel</SENTINEL-USERNAME>
         <SENTINEL-PASSWORD>sentinel</SENTINEL-PASSWORD>
         <PROFILE-ACTIVE>test</PROFILE-ACTIVE>
@@ -361,7 +361,7 @@
         <!--suppress UnresolvedMavenProperty -->
         <NACOS-PASSWORD>${NACOS_PASSWORD:nacos}</NACOS-PASSWORD>
         <!--suppress UnresolvedMavenProperty -->
-        <NACOS-CLUSTER-NAME>${NACOS_CLUSTER_NAME:laokou-cluster}</NACOS-CLUSTER-NAME>
+        <NACOS-CLUSTER-NAME>${NACOS_CLUSTER_NAME:nacos-cluster}</NACOS-CLUSTER-NAME>
         <!--suppress UnresolvedMavenProperty -->
         <SENTINEL-USERNAME>${SENTINEL_USERNAME:sentinel}</SENTINEL-USERNAME>
         <!--suppress UnresolvedMavenProperty -->
