--- a/laokou-cola/laokou-cola-infrastructure/pom.xml
+++ b/laokou-cola/laokou-cola-infrastructure/pom.xml
@@ -32,6 +32,10 @@
       <groupId>org.laokou</groupId>
       <artifactId>laokou-common-prometheus</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-cola-client</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
