--- a/laokou-common/laokou-common-domain/pom.xml
+++ b/laokou-common/laokou-common-domain/pom.xml
@@ -23,6 +23,10 @@
       <groupId>org.laokou</groupId>
       <artifactId>laokou-common-trace</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-fury</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
