--- a/laokou-common/laokou-common-redis/pom.xml
+++ b/laokou-common/laokou-common-redis/pom.xml
@@ -58,8 +58,8 @@
       <artifactId>laokou-common-core</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.apache.fury</groupId>
-      <artifactId>fury-core</artifactId>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-fury</artifactId>
     </dependency>
   </dependencies>
 </project>
