--- a/laokou-service/laokou-auth/laokou-auth-domain/src/test/resources/application.yml
+++ b/laokou-service/laokou-auth/laokou-auth-domain/src/test/resources/application.yml
@@ -1,8 +1,8 @@
 server:
-  port: 8897
+  port: 8098
 
 spring:
   application:
-    name: laokou-auth-app
+    name: laokou-auth-domain
   profiles:
     active: test
