--- a/laokou-service/laokou-network/laokou-http/laokou-http-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-network/laokou-http/laokou-http-start/src/main/resources/application.yml
@@ -88,9 +88,9 @@ spring:
       # 批量batch类型
       type: batch
       # topic不存在报错
-      missing-topics-fatal: false
+      missing-topics-fatal: true
     admin:
-      auto-create: false
+      auto-create: true
   http-server:
     auth: true
     # 创建120个端口
