--- a/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/bootstrap.yml
+++ b/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/bootstrap.yml
@@ -46,3 +46,18 @@ spring:
         file-extension: yaml
         group: ${NACOS-GROUP}
         refresh-enabled: true
+
+dubbo:
+  registry:
+    address: nacos://${NACOS-DISCOVERY-ADDRESS}?username=${NACOS-USERNAME}&password=${NACOS-PASSWORD}
+    register-mode: instance
+    parameters:
+      register-consumer-url: true
+      namespace: ${NACOS-NAMESPACE}
+    group: DUBBO_${NACOS-GROUP}
+  protocol:
+    name: dubbo
+    port: -1
+  application:
+    name: dubbo-${spring.application.name}
+    logger: slf4j
